@@ -1,0 +1,8 @@
+require 'database_cleaner/mongo/truncation'
+
+module DatabaseCleaner
+  module Mongo
+    class Deletion < Truncation
+    end
+  end
+end
