@@ -2,7 +2,7 @@ require 'database_cleaner/generic/base'
 module DatabaseCleaner
   module Mongoid
     def self.available_strategies
-      %w[truncation]
+      %w[truncation deletion]
     end
 
     module Base
