@@ -1,0 +1,10 @@
+require 'database_cleaner/mongoid/truncation'
+
+module DatabaseCleaner
+  module Mongoid
+    class Deletion < Truncation
+    end
+  end
+end
+
+
