@@ -1,4 +1,5 @@
 require "database_cleaner/redis/version"
 require "database_cleaner"
 require "database_cleaner/redis/truncation"
+require "database_cleaner/redis/deletion"
 
