@@ -1,0 +1,9 @@
+require 'database_cleaner/redis/truncation'
+
+module DatabaseCleaner
+  module Redis
+    class Deletion < Truncation
+    end
+  end
+end
+
